--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.6",
     "razorpay": "^2.9.6",
+    "serve-favicon": "^2.5.1",
     "twilio": "^5.9.0"
   },
   "devDependencies": {
